leo3/tests/ui/leanclass_unsupported_tuple_arity.stderr
error: tuple Lean declarations currently support only unit `()` or pairs `(A, B)`
 --> tests/ui/leanclass_unsupported_tuple_arity.rs:7:26
  |
7 |     fn bad(&self, value: (u64, bool, String)) -> i32 {
  |                          ^^^^^^^^^^^^^^^^^^^
